First Post List version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+
+    <!-- Strings related to post list -->
+    <string name="text_separator" translatable="false">\u00A0–\u00A0</string>
+    <string name="action_add">Create new micro post</string>
+
 </resources>
